--- a/fp/proposal.tex
+++ b/fp/proposal.tex
@@ -128,7 +128,11 @@ I don't think any special chips are needed for this design.
 \item 3 Laser Diodes - Ebay, a couple dollars
 \item 2 Half Silvered Mirrors - Plastic Supply Store Samples, free
 \item 8 Mirror slices - cheap on Ebay, maybe free?
-\item High Speed Electric Motor - Ask for it from supply, or gear something slower up.
+\item High Speed Electric Motor - Will source it from a HDD which will provide a high rpm platform
+to build on. To encode, if there is not a built in encoder, I will use an 
+LED/Phototransistor combo bouncing off the platter. A small 
+tape on the platter will not reflect too much, whereas the reflective metal will. This will generate a sync
+pulse, which, assuming constant $\omega_{hdd}$ this will allow a positional sync.
 \item High Resolution High Speed Encoder - there are ways to emulate this/sync the rasterizer.
 \item Acrylic to laser cut to build frame/mirror spinner 
 - plastic supply store or Home Depot, cheap
